# jtext-local

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  COMPLETION_SUMMARY.md  FINAL_STRUCTURE_SUMMARY.md  FINAL_TEST_RESULTS.md  Makefile  PHASE2_COMPLETION.md  PROJECT_STATUS.md  README.md  TEST_RESULTS.md  demo.py  demo_multimodal.py  demo_phase2.py  install.sh  pyproject.toml  requirements.txt  setup.py  test.html  システム要求定義書.md
demo_output/: context_aware_corrected.txt  context_aware_original.txt  demo_result.json  demo_result.txt  demo_result_corrected.json  sample.json  sample.txt
docs/: API_USAGE.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  TECHNICAL_SPECIFICATION.md  USER_GUIDE.md
docs/architecture_decision_records/: ADR-001-clean-architecture.md
jtext/: __init__.py  cli.py  core.py
jtext/application/: __init__.py  dto.py  use_cases.py
jtext/config/: __init__.py  settings.py
jtext/core/: __init__.py  multimodal_ocr.py  ocr_hybrid.py
jtext/correction/: __init__.py  context_aware_corrector.py  ocr_corrector.py
jtext/domain/: __init__.py  entities.py  events.py  interfaces.py  repositories.py  services.py  value_objects.py
jtext/infrastructure/: __init__.py  errors.py  llm_correction.py  logging.py  output.py  repositories.py  services.py  vision_analysis.py
jtext/interface/: __init__.py  cli.py
jtext/preprocessing/: __init__.py  image_prep.py
jtext/processing/: __init__.py  document_extractor.py
jtext/transcription/: __init__.py  audio_transcriber.py
jtext/utils/: __init__.py  io_utils.py  logging.py  validation.py
tests/: __init__.py  conftest.py  test_cli.py  test_context_aware_corrector_simple.py  test_core.py  test_document_extractor_extended.py  test_document_extractor_simple.py  test_domain.py  test_image_prep.py  test_infrastructure.py  test_interface.py  test_io_utils.py  test_multimodal_ocr.py  test_ocr_hybrid.py  test_phase2_features.py  test_settings.py  test_validation.py  test_vision_analysis.py
